--- a/src/NoteList.css
+++ b/src/NoteList.css
@@ -12,12 +12,13 @@ dl.NoteList > dt {
   width: auto;
   font-weight: bold;
   font-size: 1.4em;
-  padding: 15px 0 2px 10px;
+  padding: 15px 8px 2px 8px;
+  margin-left: 10px;
   margin-bottom: 10px;
   border-bottom: 2px dashed #aaa;
 }
 
 dl.NoteList > dd {
-  text-indent: 1em;
-  padding-bottom: 20px;
+  padding: 0 0 20px 1em;
+  white-space: pre;
 }
